// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OffCanvas renders correctly when closed 1`] = `
<div
  data-testid="overlay"
  onClick={[Function]}
  style={
    {
      "background": "rgba(255, 255, 255, 0.5)",
      "height": "100%",
      "left": 0,
      "position": "fixed",
      "top": 0,
      "width": "",
      "zIndex": "900",
    }
  }
>
  <div
    aria-hidden={true}
    data-testid="content"
    onKeyDown={[Function]}
    style={
      {
        "background": "rgba(0, 0, 0, 0.1)",
        "height": "300px",
        "left": "0",
        "outline": 0,
        "overflowY": "auto",
        "position": "fixed",
        "transform": "translateX(-100%)",
        "transition": "transform 0.25s ease-out",
        "transitionProperty": "",
        "width": "300px",
        "zIndex": "1000",
      }
    }
    tabIndex="-1"
  />
</div>
`;

exports[`OffCanvas renders correctly when open 1`] = `
<div
  data-testid="overlay"
  onClick={[Function]}
  style={
    {
      "background": "rgba(255, 255, 255, 0.5)",
      "height": "100%",
      "left": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
      "zIndex": "900",
    }
  }
>
  <div
    aria-hidden={false}
    data-testid="content"
    onKeyDown={[Function]}
    style={
      {
        "background": "rgba(0, 0, 0, 0.1)",
        "height": "300px",
        "left": "0",
        "outline": 0,
        "overflowY": "auto",
        "position": "fixed",
        "transform": "",
        "transition": "transform 0.25s ease-out",
        "transitionProperty": "transform",
        "width": "300px",
        "zIndex": "1000",
      }
    }
    tabIndex="-1"
  />
</div>
`;
